javascript/ql/test/query-tests/NodeJS/InvalidExport/tst4.js
module.exports.a = 23;
module.exports = 56;
